# raspberrylock

./: .gitignore  CHANGES  LICENSE  MANIFEST  MANIFEST.in  README.md  c_locc.service  config.py.sample  install.sh  ldap_interface.py  pyproject.toml  raspberrylock.service  requirements.txt  run.sh  run_schloss.sh  schloss.py  schloss_tests.py  setup.py  test_input.py
c_locc/: ldap.py  pinpad.py  states.py
docs/3dmodels/: knob.scad
docs/schematics/raspberrylock_lib.pretty/: ECA1EM332.kicad_mod  PILE_OF_POOP.kicad_mod
schematics/: .gitignore  fp-lib-table  soundlabor_schloss-cache.lib  soundlabor_schloss-rescue.lib  soundlabor_schloss.bak  soundlabor_schloss.kicad_pcb  soundlabor_schloss.kicad_pcb-bak  soundlabor_schloss.net  soundlabor_schloss.pro  soundlabor_schloss.sch
schematics/mounting_hole.pretty/: 1pin.kicad_mod
scripts/: test_pin.py
