[tool.poetry]
name = "raspberrylock"
version = "2.0.0"
description = "Door-lock software for the Raspberry Pi using GPIOs"
authors = ["Uwe Kamper <uk@c-base.org>"]

[tool.poetry.dependencies]
python = "^3.7"
lmap = {git = "https://github.com/jaseg/python-lmap.git"}
gpiozero = "^1.6.2"
sanic = "^22.9.0"
docopt = "^0.6.2"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
